# mcp-poc

./: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  app.py  langgraph.json
src/bigquery/: client.py  server.py
